crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badShaderInput.usdc
version https://git-lfs.github.com/spec/v1
oid sha256:3ffd035b3926584f576d32864958389e9d29b4f60ec71e5efaed971e3339d606
size 950
